--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": true,
   "directory": "client/bower_components",
   "dependencies": {
-    "bootstrap": "~4.0.0-alpha.6",
-    "modernizr": "~2.8.1"
+    "modernizr": "~2.8.1",
+    "normalize-css": "~7.0",
+    "roboto-fontface": ""
   }
 }
